Visualización de estadísticas de códigos QR

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,2 +1,3 @@
 <h1>Hola!</h1>
 <p>Bienvenido! inicia sesion o registrate para comenzar a crear códigos QR</p>
+<b>IMPORTANTE: LIMPIA LA CACHÉ DE TU NAVEGADOR PULSANDO CTRL+F5, O PUEDE QUE LA APLICACIÓN NO FUNCIONE CORRECTAMENTE! (Ya que es posible que algunos cambios en la API hayan hecho que la caché este corrupta)</b>
