--- a/src/theme.scss
+++ b/src/theme.scss
@@ -7,12 +7,12 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat-palette($mat-blue-gray);
+$app-primary: mat-palette($mat-teal);
 $app-accent: mat-palette($mat-orange, A200, A100, A400);
 $app-warn: mat-palette($mat-red);
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as `color` or `typography`.
-$theme: mat-dark-theme(( color: ( primary: $app-primary, accent: $app-accent, warn: $app-warn, )));
+$theme: mat-light-theme(( color: ( primary: $app-primary, accent: $app-accent, warn: $app-warn, )));
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
