--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,24 @@
-<h1>Hola!</h1>
-<p>Bienvenido! inicia sesion o registrate para comenzar a crear códigos QR</p>
-<b>IMPORTANTE: LIMPIA LA CACHÉ DE TU NAVEGADOR PULSANDO CTRL+F5, O PUEDE QUE LA APLICACIÓN NO FUNCIONE CORRECTAMENTE! (Ya que es posible que algunos cambios en la API hayan hecho que la caché este corrupta)</b>
+<div class="fullwidth">
+    <header>
+        <div class="header-content">
+            <h1>TusCódigosQR</h1>
+            <p>Generación de códigos QR dinámicos.</p>
+            <p>Utiliza los enlaces del menú superior para registrarte, iniciar sesión y ¡comenzar a crear tus QR!</p>
+        </div>
+
+    </header>
+    <main>
+        <div class="main-elem">
+            <h2>Ilimitado</h2>
+            <p>Podrás crear, modificar y eliminar tantos códigos QR dinámicos como desees.</p>
+        </div>
+        <div class="main-elem">
+            <h2>Personalizable</h2>
+            <p>Podrás personalizar tus códigos QR, añadiendo el logotipo o los colores que desees.</p>
+        </div>
+        <div class="main-elem">
+            <h2>Funciones avanzadas</h2>
+            <p>Consulta en tiempo real el origen de tus visitas, el idioma mas utilizado o el tipo de dispositivo más común entre todas las personas que visiten tus enlaces.</p>
+        </div>
+    </main>
+</div>
